<resources>
    <string name="app_name">Biker</string>
    <string name="photo">Photo</string>
    <string name="cust_name">Name</string>
    <string name="cust_tel">Telephone number</string>
    <string name="cust_mail">E-mail</string>
    <string name="cust_hour">Work hours</string>
    <string name="cust_area">Work area</string>
    <string name="cust_info">Extra Information</string>
    <string name="save_btn">Save</string>
    <string name="profile_btn">PROFILE</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="password">Password</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="signin_btn">SIGN IN</string>
    <string name="signout_btn">SIGN OUT</string>
</resources>
