<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_btn"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile_btn" />
        <item
            android:id="@+id/order_btn"
            android:icon="@drawable/ic_directions_bike_black_24dp"
            android:title="ORDER" />
        <item
            android:id="@+id/signup_btn"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/signup_btn" />
        <item
            android:id="@+id/signin_btn"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/signin_btn" />
        <item
            android:id="@+id/signout_btn"
            android:icon="@drawable/ic_clear_black_24dp"
            android:title="@string/signout_btn" />
    </group>
</menu>