<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/rel_layout">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/deliveryman" />

            <ImageView
                android:id="@+id/add_image_btn"
                android:theme="@style/MyRippleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_photo_camera_white_48dp" />
        </RelativeLayout>
        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/cust_name"
            android:layout_marginTop="40dp"
            />
        <EditText
            android:id="@+id/tel_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/cust_tel"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/mail_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/cust_mail"
            android:layout_marginTop="25dp"
            />

        <EditText
            android:id="@+id/hour_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/cust_hour"
            android:inputType="text" />
        <EditText
            android:id="@+id/area_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/cust_area"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/info_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/cust_info"
            android:layout_marginTop="25dp"
            />
        <Button
            android:id="@+id/avatar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>
    </LinearLayout>

</ScrollView>